# MxCompiler-2024

./: .gitignore  CMakeLists.txt  Makefile  todo.md
lib/: build.sh  builtin.c  builtin.ll  builtin.s  builtin_intermediate.ll
src/: main.cpp
src/backend/: asm_builder.cpp  ir_builder.cpp
src/frontend/: ast_builder.cpp  class_collector.cpp  semantic_checker.cpp  symbol_collector.cpp
src/include/asm/: asm.h  asm_function.h
src/include/asm/instruction/: arith.h  branch.h  instruction.h  mem.h
src/include/asm/register/: register.h  virtual_register.h
src/include/ast/: ast.h  ast_node.h  ast_visitor.h  root_node.h
src/include/ast/array_node/: array_node.h  jagged_array_node.h  simple_array_node.h
src/include/ast/def_node/: class_def_node.h  def_node.h  function_def_node.h  var_def_node.h
src/include/ast/expr_node/: assign_expr_node.h  atom_expr_node.h  binary_expr_node.h  expr_node.h  format_expr_node.h  function_call_expr_node.h  member_expr_node.h  subscript_expr_node.h  tenary_expr_node.h  unary_expr_node.h
src/include/ast/primary_node/: literal_primary_node.h  new_primary_node.h  primary_node.h  this_primary_node.h  var_primary_node.h
src/include/ast/stmt_node/: control_stmt_node.h  empty_stmt_node.h  expr_stmt_node.h  for_stmt_node.h  if_stmt_node.h  stmt_node.h  suite_stmt_node.h  var_def_stmt_node.h  while_stmt_node.h
src/include/ast/stmt_node/class_stmt_node/: class_stmt_node.h  (+3 more)
src/include/backend/: asm_builder.h  ir_builder.h
src/include/frontend/: ast_builder.h  class_collector.h  error_listener.h  semantic_checker.h  symbol_collector.h
src/include/ir/: block.h  function.h  ir.h  program.h  struct.h
src/include/ir/stmt/: alloca_stmt.h  binary_stmt.h  call_stmt.h  def_stmt.h  gep_stmt.h  icmp_stmt.h  load_stmt.h  move_stmt.h  phi_stmt.h  select_stmt.h  stmt.h  store_stmt.h  use_stmt.h
src/include/ir/type/: ir_type.h
src/include/ir/var/: constant.h  register.h  var.h  var_manager.h
src/include/opt/: cfg.h  normal_pass.h
src/include/opt/localization/: localization.h
src/include/opt/mem_to_reg/: mem_to_reg.h
src/include/opt/reg_alloc/: coalesce_graph.h  interference_graph.h  reg_alloc.h  spill_graph.h
src/include/parser/: MxBaseVisitor.h  MxLexer.h  MxParser.h  MxVisitor.h
src/include/utils/: bitset.h  function.h  position.hpp  set.h  type.h
src/include/utils/error/: compiler_error.h  compiler_error.hpp  semantic_error.h  semantic_error.hpp
src/include/utils/scope/: function.h  scope.h  type.h
src/opt/: cfg.cpp  normal_pass.cpp
src/opt/localization/: localization.cpp
src/opt/mem_to_reg/: mem_to_reg.cpp
src/opt/reg_alloc/: coalesce_graph.cpp  interference_graph.cpp  reg_alloc.cpp  spill_graph.cpp
src/parser/: Mx.g4  Mx.interp  Mx.tokens  MxBaseVisitor.cpp  MxLexer.cpp  MxLexer.interp  MxLexer.tokens  MxParser.cpp  MxVisitor.cpp
src/utils/: function.cpp  type.cpp
src/utils/scope/: function.cpp  scope.cpp  type.cpp
tests/: bitset.cpp
(+5 files in other folders)
